# Slidebuddy

./: .gitignore  AI_Praesentations_Tools_Vergleich.xlsx  README.md  peek_fonts.py  peek_names.py  pyproject.toml  requirements.txt  start.bat
.streamlit/: config.toml
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: HelpIcon.tsx  PlanPromptModal.tsx  ProjectLoader.tsx  SlideCard.tsx
frontend/src/hooks/: useChapters.ts  useChunks.ts  useMasters.ts  useNavigationGuard.ts  useProgress.ts  useProjects.ts  useSections.ts  useSettings.ts  useSlides.ts  useSources.ts
frontend/src/lib/: api.ts  types.ts
slidebuddy/: app.py
slidebuddy/api/: app.py  dependencies.py  schemas.py
slidebuddy/api/routers/: chapters.py  generation.py  masters.py  projects.py  (+4 more)
slidebuddy/config/: defaults.py
slidebuddy/core/: chapter_planning.py  master_analyzer.py  progress.py  section_planning.py  slide_generation.py  text_utils.py
slidebuddy/data/: slidebuddy.db
slidebuddy/db/: helpers.py  migrations.py  models.py  queries.py
slidebuddy/export/: json_exporter.py  pptx_exporter.py  txt_exporter.py
slidebuddy/llm/: invoke_helpers.py  prompt_assembler.py  prompt_logger.py  response_parser.py  router.py
slidebuddy/parsers/: __init__.py  excel_parser.py  html_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  youtube_parser.py
slidebuddy/rag/: chroma_manager.py  chunking.py  embeddings.py  retrieval.py
slidebuddy/ui/: sidebar.py  theme.py
(+78 files in other folders)
