[project]
name = "slidebuddy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "pydantic>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "chromadb>=0.5.0",
    "PyMuPDF>=1.24.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2024.0.0",
    "keyring>=25.0.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
